[gd_scene load_steps=11 format=3 uid="uid://dadmdvhmu2t1v"]

[ext_resource type="Texture2D" uid="uid://cvnywbltpao8p" path="res://assets/MyAssets/Maps/workshop int/blueprints.png" id="1_3xpyv"]
[ext_resource type="Script" path="res://scripts/items/collectible/Blueprints.gd" id="1_a7ijf"]
[ext_resource type="Script" path="res://scripts/inventory/InventoryItem.gd" id="2_2duto"]
[ext_resource type="Script" path="res://scripts/items/interactible/LongerDescPopup.gd" id="3_542oa"]
[ext_resource type="FontFile" uid="uid://digbq0mlkbh3p" path="res://assets/TemplateAssets/Assets/Font/Schr√∂dinger.ttf" id="4_xja6r"]

[sub_resource type="Resource" id="Resource_bhcp4"]
script = ExtResource("2_2duto")
name = "Blueprints"
texture = ExtResource("1_3xpyv")

[sub_resource type="CircleShape2D" id="CircleShape2D_xgc36"]
radius = 166.589

[sub_resource type="Animation" id="Animation_28d4q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LongerDescPopup/Dialog/Message:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_itvoq"]
resource_name = "typewriter"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LongerDescPopup/Dialog/Message:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6dafb"]
_data = {
"RESET": SubResource("Animation_28d4q"),
"typewriter": SubResource("Animation_itvoq")
}

[node name="Blueprints" type="Area2D"]
script = ExtResource("1_a7ijf")
item = SubResource("Resource_bhcp4")
messages = ["A collection of wrinkled and torn blueprints sit upon the workshop table, relating to a project titled Tactical Integrated Ground Engagement Robot (T.I.G.E.R.).", "The plans show an Electrical Component, Gears, and Wires as being used to fix a defunct TIGER.", "You collected: Blueprints!"]

[node name="Blueprints" type="Sprite2D" parent="."]
texture = ExtResource("1_3xpyv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xgc36")

[node name="LongerDescPopup" type="CanvasLayer" parent="."]
script = ExtResource("3_542oa")

[node name="Dialog" type="ColorRect" parent="LongerDescPopup"]
anchors_preset = -1
anchor_left = 0.187
anchor_top = 0.669
anchor_right = 0.812
anchor_bottom = 0.904445
offset_left = 0.959991
offset_top = -0.52002
offset_right = 0.959961
offset_bottom = 0.199951
grow_horizontal = 2
grow_vertical = 0
color = Color(0.847059, 0.686275, 0.235294, 0.321569)
metadata/_edit_use_anchors_ = true

[node name="Message" type="Label" parent="LongerDescPopup/Dialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0479167
anchor_top = 0.280392
anchor_right = 0.959583
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -22.5
offset_right = 0.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_xja6r")
theme_override_font_sizes/font_size = 45
text = "Text...."
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Continue" type="Label" parent="LongerDescPopup/Dialog"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -143.5
offset_top = -50.0
offset_right = 143.5
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.283472, 0.399079, 0.736571, 1)
theme_override_fonts/font = ExtResource("4_xja6r")
theme_override_font_sizes/font_size = 35
text = "[E to Continue]"
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6dafb")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
